--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -15,4 +15,5 @@ jobs:
 
     - name: Install dependencies
       run: |
+        sudo apt install python3-pip
         pip install -r requirements.txt
