--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: 3.11
 
     - name : checkout
-      uses : action/checkout@v4
+      uses : actions/checkout@v4
 
     - name: Install dependencies
       run: |
